...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners"
            android:visibility="visible">

            <ImageView
                android:id="@+id/galleryItemIv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:scaleType="fitXY"
                android:onClick="@{() -> viewModel.imageClick(position, imageUri.uri)}"
                app:imageSourceGallery="@{imageUri.uri}" />
...
